# UniProt-PTM-Lookup

./: README.md  pyproject.toml
src/uniprot_ptm_lookup/: __init__.py  core.py  uniprot_ptm_entries_2026_01.json
