[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uniprot-ptm-lookup"
version = "0.1.3"
description = "Annotate inline peptide PTMs using the UniProt PTM vocabulary"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["proteomics", "ptm", "uniprot", "peptide", "mass spectrometry"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/JasonPBennett/uniprot-ptm-lookup"
"Source Code" = "https://github.com/JasonPBennett/uniprot-ptm-lookup"
Issues = "https://github.com/JasonPBennett/uniprot-ptm-lookup/issues"
Releases = "https://github.com/JasonPBennett/uniprot-ptm-lookup/releases"
"Upstream PTM Vocabulary" = "https://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/complete/docs/ptmlist"

[project.scripts]
uniprot-ptm-lookup = "uniprot_ptm_lookup.core:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uniprot_ptm_lookup = ["uniprot_ptm_entries_*.json"]